# mare-demo

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: const.py
data/: _content.txt  company_content.txt  event_content.txt  faq_content.txt  kaiji.txt  prohibited-matters_content.txt  voc_content.txt  website_content.txt
data/faiss_index/: index.faiss  index.pkl
notebooks/: LinkedInAPI.ipynb  Untitled.ipynb  chatbot.ipynb  graph_rag.ipynb  memory.db  multimodal_ai.ipynb
src/: app.py
src/pages/: chatbot_rag.py  insight_ai.py  multimodal_ai.py
